# chess

./: Cargo.toml  game.js  index.html
benches/: benchmark.rs
pkg/: chess.d.ts  chess.js  chess_bg.wasm  chess_bg.wasm.d.ts
src/: bitboard.rs  board.rs  color.rs  debug.rs  eval.rs  glue.rs  lib.rs  moves.rs  piece.rs  search.rs  square.rs  uci.rs
