[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/bin/main.rs"

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dev-dependencies]
criterion ={ version = "0.5", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false
